--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     .figures{ text-align:right; display:grid; gap:2px }
     .hero{ font-size:var(--fz-36); font-weight:800; line-height:1.0; letter-spacing:.2px; color:#cfe6ff; text-shadow: 0 6px 18px rgba(114,168,255,.18) }
     .caption{ color:var(--muted); font-size:var(--fz-12) }
-    .svc{ font-weight:800; color:var(--accent-2) }
+    .svc{ font-weight:800; color:#7be0c3 }
 
     table{width:100%; border-collapse:collapse; margin-top:12px}
     th,td{border-bottom:1px dashed #203043; padding:9px 6px; text-align:left; font-size:var(--fz-13)}
@@ -81,6 +81,8 @@
     .break th,.break td{ border:0; padding:6px 8px; text-align:left; font-size:12px; }
     .break .codepill{ display:inline-block; padding:2px 8px; border:1px solid var(--line); border-radius:999px; font-family:ui-monospace,Menlo,Consolas,monospace; font-size:12px; color:#cfe1ff; background:#0e1a30; }
     .break .colhed{ color:var(--muted); font-weight:600; }
+
+    .diag{ margin-top:12px; padding:10px; border:1px dashed #4b6; background:#0c1c12; color:#bff2d4; border-radius:10px; font-size:12px; }
 
     :focus-visible{ outline:2px solid var(--accent); outline-offset:2px; border-radius:8px }
     @media print{ header,.bar{display:none} body{background:#fff; color:#000} .tier{break-inside:avoid; border:1px solid #000; box-shadow:none} table, th, td{border-color:#000} }
@@ -129,6 +131,7 @@
     </div>
 
     <div id="stack" class="stack"></div>
+    <div id="diag" class="diag" style="display:none"></div>
   </main>
 
   <!-- Error overlay for runtime issues -->
@@ -156,7 +159,7 @@
 
     /* ================== Config & utils ================== */
 
-    // Prefer strict v9; fall back if unavailable.
+    // Strict → recent → legacy fallbacks
     const CSV_CANDIDATES = [
       './data/vsp_choice_master_v9_strict.csv',
       './data/vsp_choice_master_v8_1_from_patched.csv',
@@ -217,7 +220,8 @@
     const clearCacheStorage=()=>{ localStorage.removeItem(CACHE_KEY); localStorage.removeItem(META_KEY); };
 
     let DATA=[];
-    let SIMPLE_BY_CODE = new Map();
+    let SIMPLE_BY_CODE = new Map(); // single-code rows
+    let ACTIVE_ROWS = [];
 
     function buildSimpleIndex(){
       SIMPLE_BY_CODE = new Map();
@@ -263,12 +267,16 @@
       }
 
       if (loaded){
-        const meta = { plan:'VSP_choice', version:new Date().toISOString().slice(0,10)+'.ui18.2-alamo', source:'network:'+loaded.url, sha:quickHash(loaded.text) };
+        const meta = { plan:'VSP_choice', version:new Date().toISOString().slice(0,10)+'.ui18.3-alamo', source:'network:'+loaded.url, sha:quickHash(loaded.text) };
         setCache(loaded.text, meta);
         DATA = parseCSV(loaded.text);
+        ACTIVE_ROWS = DATA.filter(r => {
+          const v = String(r.active??'yes').trim().toLowerCase();
+          return ['',' ','y','yes','true','1','active','enabled'].includes(v);
+        });
         buildSimpleIndex();
-        renderMeta(DATA.length, meta);
-        status.textContent = ` [ok] ${loaded.url} • ${DATA.length} rows`;
+        renderMeta(ACTIVE_ROWS.length, meta);
+        status.textContent = ` [ok] ${loaded.url} • ${ACTIVE_ROWS.length} rows`;
         computeBundles();
         return;
       }
@@ -276,9 +284,13 @@
       const {text, meta} = getCache();
       if(text){
         DATA = parseCSV(text);
+        ACTIVE_ROWS = DATA.filter(r => {
+          const v = String(r.active??'yes').trim().toLowerCase();
+          return ['',' ','y','yes','true','1','active','enabled'].includes(v);
+        });
         buildSimpleIndex();
-        renderMeta(DATA.length, {...meta, source:'cache'});
-        status.textContent = ` Network failed. Using cached data (${DATA.length} rows).`;
+        renderMeta(ACTIVE_ROWS.length, {...meta, source:'cache'});
+        status.textContent = ` Network failed. Using cached data (${ACTIVE_ROWS.length} rows).`;
         computeBundles();
         return;
       }
@@ -297,14 +309,7 @@
         <div style="margin-top:6px">I tried these paths (first wins):</div>
         <ul>${urls}</ul>
         <div style="margin-top:6px">Results:</div>
-        <ul>${errs}</ul>
-        <div style="margin-top:6px"><b>Fix it fast:</b>
-          <ol>
-            <li>Place the CSV next to this HTML (or under <code>./data/</code>).</li>
-            <li>Open this page via a local server (not <code>file://</code>).</li>
-            <li>Click <b>Clear Cache</b> then <b>Force Refresh</b>.</li>
-          </ol>
-        </div>${hint}`;
+        <ul>${errs}</ul>${hint}`;
       el('status').textContent = ' load failed (see diagnostics below)';
       document.querySelector('main').appendChild(diag);
     }
@@ -313,25 +318,34 @@
       el('version').textContent = `plan=${meta.plan||'VSP_choice'} • rows=${count||0} • version=${meta.version||'—'} • source=${meta.source||'—'} • sha=${meta.sha||'—'}`;
     }
 
-    /* ---------- Robust key & flag handling (v9 strict friendly) ---------- */
+    /* ---------- Key mapping with heuristic fallback ---------- */
 
-    const ACTIVE_TRUE = new Set(['yes','true','1','y','active','',' ']);
-    const isActiveRow = r => ACTIVE_TRUE.has(String(r.active??'yes').trim().toLowerCase());
+    const NAMES = {
+      base: new Set(['base_material','base','material','lens_material','sv_base']),
+      occ:  new Set(['occupational','occ','lined','bifocal','trifocal']),
+      pal:  new Set(['progressive_level','progressive','pal','mf_level','multifocal']),
+      ar:   new Set(['ar_level','ar','anti_reflective','antireflective','coating_ar','anti-reflective']),
+      sun:  new Set(['sun_tech','sun','tint','photochromic','polarized','sunwear','sunwear_tech']),
+      os:   new Set(['oversize','os'])
+    };
 
-    function rowsByKeyNames(names){
-      const set = new Set((names||[]).map(n=>String(n||'').toLowerCase()));
-      return DATA.filter(r => isActiveRow(r) && set.has(String(r.exclusive_key||'').toLowerCase()));
+    function bucketGuess(r){
+      const s = N((r.enhancement||'')+' '+(r.subtype||'')+' '+(r.code||''));
+      if (/over\s*size|oversize|oversized|\bos\b/.test(s)) return 'os';
+      if (/anti[-\s]?reflect|[^a-z]ar[^a-z]/.test(s)) return 'ar';
+      if (/polariz|photochrom|transition|tint|tinted|gradient|sunglass/.test(s)) return 'sun';
+      if (/progressive|multi\s*focal|\bpal\b|\bmf\b/.test(s)) return 'pal';
+      if (/occupational|lined|bifocal|trifocal|\bocc\b/.test(s)) return 'occ';
+      return 'base';
     }
 
-    // Key aliases tolerated from CSVs we’ve seen
-    const KEY = {
-      base:       () => rowsByKeyNames(['base_material','base','material','lens_material','sv_base']),
-      occ:        () => rowsByKeyNames(['occupational','occ','lined','bifocal','trifocal']),
-      pal:        () => rowsByKeyNames(['progressive_level','progressive','pal','mf_level']),
-      ar:         () => rowsByKeyNames(['ar_level','ar','anti_reflective','antireflective','coating_ar']),
-      sun:        () => rowsByKeyNames(['sun_tech','sun','tint','photochromic','polarized','sunwear']),
-      oversize:   () => rowsByKeyNames(['oversize','os'])
-    };
+    function rowsByCanon(canon){
+      return ACTIVE_ROWS.filter(r=>{
+        const ex = String(r.exclusive_key||'').toLowerCase();
+        if (NAMES[canon].has(ex)) return true;
+        return bucketGuess(r) === canon;
+      });
+    }
 
     function applies(row, fam){
       const a=(row.applies_to||'ALL').toUpperCase();
@@ -343,7 +357,7 @@
       return true;
     }
 
-    /* ===== Per-line math (composites prefer per-part splits from CSV v9) ===== */
+    /* ===== Per-line math (strict-friendly; respects embedded splits) ===== */
     function line(row){
       const desc = row.enhancement || row.subtype || '—';
       const codeStr = String(row.code||'').trim().toUpperCase();
@@ -355,9 +369,10 @@
       }
 
       const copParts = parseNumberList(row.copay);
-      const hbParts  = parseNumberList(row.chargeback_split);
-      const parts = [];
+      const hbParts  = parseNumberList(row.chargeback_split || row.holdback_split || row.chargeback);
+
       const n = partsCodes.length;
+      const parts = [];
 
       // Copay per part
       let cp = [];
@@ -366,7 +381,7 @@
       }else{
         const baseCode = partsCodes[0];
         const baseRow  = pickSimpleByExactCode(baseCode);
-        let baseCop  = baseRow ? num(baseRow.copay) : num(row.copay) / n;
+        let baseCop  = baseRow ? num(baseRow.copay) : num(row.copay)/n;
         const remain = Math.max(num(row.copay) - baseCop, 0);
         const each = n>1 ? remain/(n-1) : 0;
         cp = [baseCop, ...Array.from({length:n-1}, ()=>each)];
@@ -531,7 +546,7 @@
       const tintSel = el('lensTint').value;
       if (tintSel==='clear' || tintSel==='polarized') return null;
       const fam = el('lensFamily').value;
-      const sunAll = KEY.sun().filter(r=>applies(r,fam)).filter(r=>{
+      const sunAll = rowsByCanon('sun').filter(r=>applies(r,fam)).filter(r=>{
         const n=N(r.enhancement);
         if(!el('includeGlass').checked && n.includes('glass')) return false;
         return true;
@@ -539,7 +554,7 @@
 
       if (tintSel==='transitions') {
         const want = preferPhotoCodeForBase(baseRow);
-        let pool = sunAll.filter(r => /photochrom/.test(N(r.enhancement)));
+        let pool = sunAll.filter(r => /photochrom|transition/.test(N(r.enhancement)));
         let choice = pool.find(r => new RegExp('^' + want, 'i').test((r.code || '').trim())) || pool.find(r=>isPPhoto(r));
         return choice || null;
       }
@@ -559,8 +574,20 @@
       return first === 'NA' || first === 'OA';
     }
 
+    function diagCounts(fam){
+      const buckets = {
+        base: rowsByCanon('base').filter(r=>applies(r,fam)).length,
+        occ:  rowsByCanon('occ').filter(r=>applies(r,fam)).length,
+        pal:  rowsByCanon('pal').filter(r=>applies(r,fam)).length,
+        ar:   rowsByCanon('ar').filter(r=>applies(r,fam)).length,
+        sun:  rowsByCanon('sun').filter(r=>applies(r,fam)).length,
+        os:   rowsByCanon('os').filter(r=>applies(r,fam)).length,
+      };
+      return buckets;
+    }
+
     function computeBundles(){
-      if(!DATA.length){ el('stack').innerHTML=''; return; }
+      if(!ACTIVE_ROWS.length){ el('stack').innerHTML=''; return; }
 
       const fam = el('lensFamily').value;
       const wantAR = el('includeAR').checked;
@@ -569,19 +596,19 @@
       const wantGlass = el('includeGlass').checked;
       const tintSel = el('lensTint').value;
 
-      const sunAll = KEY.sun().filter(r=>applies(r,fam)).filter(r=>{
+      const sunAll = rowsByCanon('sun').filter(r=>applies(r,fam)).filter(r=>{
         const n=N(r.enhancement);
         if(!wantGlass && n.includes('glass')) return false;
         return true;
       });
 
       const isCustomMeasure = (row) => /custom\s*measure/i.test(N(row?.enhancement || row?.subtype || ''));
-      const customPool = DATA.filter(r => applies(r, 'PAL')).filter(isCustomMeasure);
+      const customPool = ACTIVE_ROWS.filter(r => applies(r, 'PAL')).filter(isCustomMeasure);
 
       // Base candidates
       let base = [];
       if (fam === 'PAL') {
-        base = KEY.pal().filter(r=>applies(r,fam)).filter(r=>{
+        base = rowsByCanon('pal').filter(r=>applies(r,fam)).filter(r=>{
           const name=N(r.enhancement);
           if(!wantAsp && name.includes('aspheric')) return false;
           if(!wantGlass && name.includes('glass'))  return false;
@@ -593,8 +620,7 @@
         if (tintSel==='polarized') {
           base = sunAll.filter(r => /polariz/.test(N(r.enhancement)) && isDCode(r)); // SV/Lined → D-codes
         } else {
-          // SV: base materials; LINED: occupational (fallback to base materials if CSV lacks OCC bucket)
-          const pool = fam==='SV' ? KEY.base() : KEY.occ().concat(KEY.base());
+          const pool = fam==='SV' ? rowsByCanon('base') : rowsByCanon('occ').concat(rowsByCanon('base'));
           base = pool.filter(r=>applies(r,fam)).filter(r=>{
             const name=N(r.enhancement);
             if(!wantAsp && name.includes('aspheric')) return false;
@@ -616,11 +642,11 @@
           return pb-pa;
         });
       }
-      const arPool = wantAR ? KEY.ar().filter(r=>applies(r,fam)) : [];
+      const arPool = wantAR ? rowsByCanon('ar').filter(r=>applies(r,fam)) : [];
       const arRanked = wantAR ? rankAR(arPool) : [];
       const arOptions = wantAR && arRanked.length ? arRanked : [null];
 
-      const overs = wantOS ? (KEY.oversize().filter(r=>applies(r,fam))[0] || null) : null;
+      const overs = wantOS ? (rowsByCanon('os').filter(r=>applies(r,fam))[0] || null) : null;
 
       function buildBundle(m, arRow){
         const maybeCM = (el('includeCM')?.checked && fam==='PAL' && isNOBase(m)) ? (customPool[0]||null) : null;
@@ -629,7 +655,15 @@
 
       const all = [];
       for(const m of base){ for(const ar of arOptions){ all.push(buildBundle(m, ar)); } }
+
+      // Diagnostics if we built nothing
+      const diagBox = el('diag');
       if (!all.length){
+        const c = diagCounts(fam);
+        diagBox.style.display = 'block';
+        diagBox.innerHTML = `<b>Diagnostics:</b> No viable bundle for <code>${fam}</code>.
+        <div>Bucket counts after <i>applies_to</i> filter — base:${c.base} • occ:${c.occ} • pal:${c.pal} • ar:${c.ar} • sun:${c.sun} • oversize:${c.os}</div>
+        <div>Tip: ensure <code>exclusive_key</code> or descriptions map to these buckets (base/occ/pal/ar/sun/oversize).</div>`;
         renderStack([
           {name:'Best',cls:'best',b:null},
           {name:'Better',cls:'better',b:null},
@@ -637,6 +671,9 @@
           {name:'Cheapest',cls:'good',b:null}
         ]);
         return;
+      } else {
+        diagBox.style.display = 'none';
+        diagBox.innerHTML = '';
       }
 
       const MaxPrice = Math.max(...all.map(b => b.copay));
